# APF-Paper-10-Calculus-of-Finite-Continuability

./: APF_Reviewer_Walkthrough.ipynb  NEXT_STEPS.md  Paper_10_Calculus_of_Finite_Continuability_v1.12.tex  Paper_10_Calculus_of_Finite_Continuability_v1.21.tex  README.md  REVIEWERS_GUIDE.md  START_HERE.md  derivation_graph.json  interactive_dag.html  pyproject.toml  repo_map.json  run_checks.py  theorems.json  zenodo.json
Old/: zenodo.json.pre-relation-fix
ai_context/: AGENTS.md  ARGUMENT_FLOW.md  CITING.md  CLAIMS_LEDGER.md  DO_NOT_CLAIM.md  HOW_TO_VERIFY.md  LOCAL_VS_IMPORTED.md  PAPER_LINEAGE.md  STARTING_PROMPTS.md  THEOREMS.md  derivation_graph.json  repo_map.json
apf/: __init__.py  bank.py  core.py
docs/: index.html
